<resources>
    <string name="app_name">tintint_JW</string>
    <string name="searchTeam">팀 찾기</string>
    <string name="matching">매칭</string>
    <string name="profile">프로필</string>
    <string name="name">tingting</string>
    <string name="clickable_string">4년제 대학 보기</string>
    <string name="profile_picture_register_ex">회원님의 매력적인 사진을 심사하기위해서 \n
    눈코입이 명확히 나온 사진을 올려주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="kakao_app_key">50369546c30c9bff42acbddff5e7db86</string>
    <string name="baseURL">http://13.125.28.123/</string>

    <string-array name="filterOptions">
        <item>활발한</item>
        <item>귀여운</item>
        <item>00년생</item>
        <item>소주</item>
        <item>소맥좋아</item>
        <item>잘놀아요</item>
        <item>이쁨</item>
    </string-array>


    <string name="hint_id">id</string>
    <string name="hint_pw">********</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="slash">/</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_up_kakao">카카오톡으로 시작하기</string>
</resources>
