<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:id="@+id/appHighBar"

    android:background="@drawable/edge_gray_bottom"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textAlignment="center"
        android:textSize="25dp"
        android:fontFamily="@font/bakery"
        android:textColor="@color/tingtingMain"
        android:text="TingTing" />
</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
      >
        <fragment
            android:id="@+id/mainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </fragment>
    </FrameLayout>

   <LinearLayout
       android:background="@drawable/edge_gray_top"
       android:layout_width="match_parent"
       android:layout_height="56dp"
       android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/serachteam"
                android:layout_gravity="center_horizontal"
                android:id="@+id/searchTeam"
                >

            </ImageView>
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/searchTeam"
                android:fontFamily="@font/bakery"
                android:textColor="@color/tingtingMain"
                android:textSize="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="0.33"
           android:orientation="vertical"
           android:layout_height="match_parent">

           <ImageView
               android:id="@+id/matching"
               android:layout_marginTop="6dp"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/matching"
               android:layout_gravity="center_horizontal">

           </ImageView>
           <TextView
               android:layout_gravity="center_horizontal"
               android:text="@string/matching"
               android:fontFamily="@font/bakery"
               android:textColor="@color/tingtingMain"
               android:textSize="10dp"
               android:layout_marginBottom="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">

           </TextView>

       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="0.33"
           android:orientation="vertical"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/profile"
               android:layout_marginTop="6dp"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/profile"
               android:layout_gravity="center_horizontal">

           </ImageView>
           <TextView
               android:layout_gravity="center_horizontal"
               android:text="@string/profile"
               android:fontFamily="@font/bakery"
               android:textColor="@color/tingtingMain"
               android:textSize="10dp"
               android:layout_marginBottom="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">

           </TextView>
       </LinearLayout>



   </LinearLayout>
</LinearLayout>
